@@ -7,14 +7,19 @@ import br.ada.caixa.dto.request.clientePJ.InsercaoPJRequestDto;
 import br.ada.caixa.dto.response.ClientePFResponseDto;
 import br.ada.caixa.dto.response.ClientePJResponseDto;
 import br.ada.caixa.entity.cliente.ClientePJ;
+import br.ada.caixa.entity.conta.ContaCorrente;
 import br.ada.caixa.enums.Status;
 import br.ada.caixa.exception.ValidacaoException;
 import br.ada.caixa.repository.ClienteRepository;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Service;
 
+import java.math.BigDecimal;
 import java.time.LocalDate;
+import java.util.ArrayList;
 import java.util.List;
+import java.util.Random;
+import java.util.stream.Collectors;
 
 @Service
 public class ClientePJService {
@@ -31,11 +36,23 @@ public class ClientePJService {
         ClientePJ cliente = modelMapper.map(insercaoPJRequestDto, ClientePJ.class);
         cliente.setStatus(Status.ATIVO);
         cliente.setDataCadastro(LocalDate.now());
+
+        ContaCorrente contaCorrente = new ContaCorrente();
+
+        contaCorrente.setNumero(new Random().nextInt());
+        contaCorrente.setDataCriacao(LocalDate.now());
+        contaCorrente.setCliente(cliente);
+        contaCorrente.setSaldo(BigDecimal.ZERO);
+        contaCorrente.setStatus(Status.ATIVO);
+
+        cliente.setContas(new ArrayList<>());
+        cliente.getContas().add(contaCorrente);
+
         cliente = clienteRepository.save(cliente);
         return modelMapper.map(cliente, ClientePJResponseDto.class);
     }
 
-    public ClientePJResponseDto atualizar(Long id, AtualizacaoPJRequestDto atualizacaoPJRequestDto) {
+    public ClientePJResponseDto atualizar(String id, AtualizacaoPJRequestDto atualizacaoPJRequestDto) {
         return clienteRepository.findById(id)
                 .map(cliente -> {
                     modelMapper.map(atualizacaoPJRequestDto, cliente);
@@ -46,7 +63,7 @@ public class ClientePJService {
 
     }
 
-    public void excluir(Long id) {
+    public void excluir(String id) {
         clienteRepository.deleteById(id);
     }
 
@@ -54,28 +71,28 @@ public class ClientePJService {
         return clienteRepository.findAllPJ()
                 .stream()
                 .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
-                .toList();
+                .collect(Collectors.toList());
 
     }
 
-    public ClientePJResponseDto buscarPorId(Long id) {
+    public ClientePJResponseDto buscarPorId(String id) {
         return clienteRepository.findById(id)
                 .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
                 .orElseThrow(() -> new ValidacaoException("Cliente não encontrado"));
     }
 
-    public List<ClientePJResponseDto> buscarPorRazaoSocial(ClientePJFilter filter) {
-        return clienteRepository.findAllByRazaoSocial(filter.getRazaoSocial())
-                .stream()
-                .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
-                .toList();
-    }
-
-    public ClientePJResponseDto buscarPorCnpj(ClientePJFilter filter) {
-        return clienteRepository.findByCnpj(filter.getCnpj())
-                .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
-                .orElseThrow(() -> new ValidacaoException("Cliente não encontrado"));
-    }
+//    public List<ClientePJResponseDto> buscarPorRazaoSocial(ClientePJFilter filter) {
+//        return clienteRepository.findAllByRazaoSocial(filter.getRazaoSocial())
+//                .stream()
+//                .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
+//                .toList();
+//    }
+//
+//    public ClientePJResponseDto buscarPorCnpj(ClientePJFilter filter) {
+//        return clienteRepository.findByCnpj(filter.getCnpj())
+//                .map(cliente -> modelMapper.map(cliente, ClientePJResponseDto.class))
+//                .orElseThrow(() -> new ValidacaoException("Cliente não encontrado"));
+//    }
 
 
 }
